# Polarion-MCP

./: .dockerignore  .gitignore  DISTRIBUTION.md  Dockerfile  README.md  USER_GUIDE.md  deploy.sh  docker-build.sh  mcp.json.example  package.json  polarion-mcp-auto.sh  polarion_mcp_server.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: docker-publish.yml
