[project]
name = "polarion-mcp"
version = "0.1.0"
description = "Polarion MCP Server for authentication and requirements fetching"
authors = [{ name = "Atoms Team" }]
dependencies = [
    "loguru",
    "mcp",
    "requests",
    "selenium",
    "webdriver-manager"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 